# strom

./: CMakeLists.txt  LICENSE
include/strom/: stream.h  string.h
lib/unix/: file.c
lib/xp/: core.c  input.c  output.c  stream.c
modules/file/: CMakeLists.txt
modules/file/include/strom/: file.h
modules/file/lib/unix/: file.c
modules/file/lib/win32/: file.c
modules/string/: CMakeLists.txt
modules/string/lib/cross/: string.c
test/file/: test_file.cc
test/stream/: dummyStream.cc  dummyStream.hh  test_getch.cc  test_putch.cc  test_puts.cc  test_read.cc  test_readLine.cc  test_readUntil.cc  test_readWord.cc  test_ungetch.cc  test_write.cc
test/string/: test_string.cc
